--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
-<html lang="cs">
-  <head>
-    <meta charset="utf-8" />
-    <title>Nimeru</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/style.css" />
-  </head>
-  <body>
-    <h1>Hey! Welcome to my website!</h1>
-    <div class="music">
-      <div class="center top">
-        <iframe
-          style="border: 0; width: 350px; height: 350px"
-          src="https://bandcamp.com/EmbeddedPlayer/track=3078870074/size=large/bgcol=333333/linkcol=0f91ff/minimal=true/transparent=true/"
-          seamless
-          ><a href="https://nimeru.bandcamp.com/track/by-the-sea"
-            >By the Sea by Nimeru</a
-          ></iframe
-        >
-      </div>
-      <div class="center">
-        <iframe
-          style="border: 0; width: 350px; height: 350px"
-          src="https://bandcamp.com/EmbeddedPlayer/track=2326010072/size=large/bgcol=333333/linkcol=fe7eaf/minimal=true/transparent=true/"
-          seamless
-          ><a href="https://nimeru.bandcamp.com/track/static-dynamic"
-            >Static Dynamic by Nimeru</a
-          ></iframe
-        >
-      </div>
-      <div class="center bottom">
-        <iframe
-          style="border: 0; width: 350px; height: 350px"
-          src="https://bandcamp.com/EmbeddedPlayer/track=1690904250/size=large/bgcol=333333/linkcol=fe7eaf/minimal=true/transparent=true/"
-          seamless
-          ><a href="https://nimeru.bandcamp.com/track/mind"
-            >Mind by Nimeru</a
-          ></iframe
-        >
-      </div>
-    </div>
-  </body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="Music by Nimeru" />
+        <meta name="author" content="Nimeru" />
+        <title>Nimeru Music</title>
+   
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+        <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="assets/mp4/bg.mp4" type="video/mp4" /></video>
+        <div class="masthead">
+            <div class="masthead-content text-white">
+                <div class="container-fluid px-4 px-lg-0">
+                    <h1 class="fst-italic lh-1 mb-4">Hey! I'm Nimeru. I make music.</h1>
+                    <p class="mb-5">Hey! I'm Nimeru, I make experimental music. This is my website for new stuff or links.</p>
+                </div>
+            </div>
+        </div>
+        <div class="social-icons">
+            <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
+                <a class="btn btn-dark m-3" href="#!"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark m-3" href="https://nimeru.bandcamp.com"><i class="fab fa-bandcamp"></i></a>
+                <a class="btn btn-dark m-3" href="https://www.youtube.com/channel/UCvko1UnmgeqCaAtwpV8EbmA"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+        <!-------------------------------------------------------------------------------------------------->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+        <!-------------------------------------------------------------------------------------------------->
+    </body>
 </html>
