--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
-                <a class="btn btn-dark m-3" href="#!"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-dark m-3" href="https://twitter.com/nimerumusic"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-dark m-3" href="https://nimeru.bandcamp.com"><i class="fab fa-bandcamp"></i></a>
                 <a class="btn btn-dark m-3" href="https://www.youtube.com/channel/UCvko1UnmgeqCaAtwpV8EbmA"><i class="fab fa-youtube"></i></a>
             </div>
